# ropus

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  compare_stderr.txt  debug_out.txt  full_stderr.txt  stderr2.txt
.cargo/: config.toml  mutants.toml
fb2k-ropus/: CMakeLists.txt  README.md  build.ps1
fb2k-ropus/src/: dllmain.cpp  input_ropus_opus.cpp
full-test/: Cargo.toml
full-test/src/: ambisonics.rs  banner.rs  bench.rs  cargo_parse.rs  cli.rs  corpus.rs  fuzz.rs  html.rs  ietf_vectors.rs  issues.rs  llvm_cov_parse.rs  main.rs  platform.rs  preflight.rs  quality.rs  report.rs  setup.rs  tests.rs
harness/: Cargo.toml  build.rs  config.h  debug_helper.c  debug_silk_trace.c  silk_enc_api_traced.c  silk_encode_frame_FIX_traced.c
harness-control/: Cargo.toml
harness-control/src/: lib.rs
harness-control/tests/: control_snr.rs
harness-deep-plc/: Cargo.toml  build.rs  config.h  dred_dec_shim.c  dred_enc_shim.c  dred_encode_shim.c
harness-deep-plc/c/: burg_thunk.c  peek.c
harness-deep-plc/src/: lib.rs
harness-deep-plc/src/bin_inner/: ctrl_decode_float.rs
harness-deep-plc/tests/: burg_cepstral_analysis_diff.rs  dred_bitrate_plumbing_diff.rs  dred_bitrate_plumbing_nonzero_diff.rs  dred_compute_bitrate_ffi_diff.rs  dred_decode_payload_diff.rs  dred_dtx_first_frame_diff.rs  dred_encode_payload_diff.rs  dred_integrated_encode.rs  dred_lpcnet_feature_drift.rs  dred_rdovae_dec_diff.rs  dred_rdovae_enc_diff.rs  state_divergence.rs  tier2_snr.rs
harness/src/: bindings.rs  cli.rs  lib.rs  main.rs
harness/src/bin_inner/: corpus_diff.rs  ctrl_decode_fixed.rs  diff_fuzz_decode.rs  find_first_divergence.rs  fuzz_repro_diff.rs  interframe.rs  pcm_drift.rs  projection_roundtrip.rs  replay_fuzz_decode.rs  repro_fuzz_roundtrip.rs  trace_silk_wb.rs
harness/tests/: c_ref_differential.rs  c_ref_differential_param_grid.rs  corpus_diff_webm_defer.rs  dred_differential.rs  silk_trace_v2_positive_control.rs
ropus/: CHANGELOG.md  Cargo.toml  README.md  build.rs
ropus-cli/: Cargo.toml  build.rs
ropus-cli/src/: cli.rs  commands.rs  consts.rs  main.rs  ui.rs  util.rs
ropus-cli/src/audio/: decode.rs  mod.rs  resample.rs  wav.rs
ropus-cli/src/container/: mod.rs  ogg.rs
ropus-cli/tests/: round_trip.rs
ropus-fb2k/: Cargo.toml
ropus-fb2k/include/: ropus_fb2k.h
ropus-fb2k/src/: error.rs  io.rs  lib.rs  reader.rs  tags.rs
ropus-fb2k/tests/: roundtrip.rs
ropus-fb2k/tests/common/: mod.rs
ropus-tools-core/: Cargo.toml
ropus-tools-core/src/: consts.rs  lib.rs  options.rs  prelude.rs  ui.rs  util.rs
ropus-tools-core/src/audio/: decode.rs  dither.rs  downmix.rs  mod.rs  resample.rs  wav.rs
ropus-tools-core/src/commands/: decode.rs  encode.rs  info.rs  mod.rs  play.rs
ropus-tools-core/src/container/: mod.rs  ogg.rs  picture.rs  toc.rs
ropus-tools-core/tests/: round_trip.rs
ropus/examples/: decode.rs  encode.rs  roundtrip.rs
ropus/examples/common/: wav.rs
ropus/proptest-regressions/: property_tests_codec.txt
ropus/src/: api.rs  coverage_tests.rs  lib.rs  property_tests_codec.rs  property_tests_packet.rs  types.rs
ropus/src/celt/: bands.rs  cwrs.rs  decoder.rs  ec_ctx.rs  encoder.rs  math_ops.rs  mdct.rs  mod.rs  pitch.rs  range_coder.rs  rate.rs  simd.rs  tables.rs  vq.rs
ropus/src/dnn/: core.rs  dred.rs  dred_stats.rs  embedded_weights.rs  fargan.rs  lossgen.rs  lpcnet.rs  mod.rs
ropus/src/opus/: analysis.rs  decoder.rs  dred.rs  encoder.rs  extensions.rs  mlp.rs  mlp_data.rs  mod.rs  multistream.rs  multistream_tables.rs  repacketizer.rs  soft_clip.rs
ropus/src/silk/: common.rs  decoder.rs  encoder.rs  mod.rs  tables.rs
ropusenc/: Cargo.toml
ropusenc/src/: main.rs
ropusenc/tests/: cli.rs
ropusinfo/: Cargo.toml
ropusinfo/src/: main.rs
ropusinfo/tests/: cli.rs
ropusplay/: Cargo.toml  build.rs
ropusplay/src/: main.rs
ropusplay/tests/: cli.rs
tests/conformance/: Cargo.toml  README.md  build.rs
tests/conformance/include/: arch.h  float_cast.h  mathops.h  opus_private.h
tests/conformance/src/: dred_stub.c  regression_test_stub.c
tests/conformance/tests/: api.rs  decode.rs  encode.rs  extensions.rs  ietf_vectors.rs  padding.rs  projection.rs  run.rs
tests/fuzz/: Cargo.toml  README.md  build.rs
tests/fuzz/fuzz_targets/: c_reference.rs  frame_duration.rs  fuzz_ctl_sequence.rs  fuzz_decode.rs  fuzz_decode_plc_seq.rs  fuzz_decode_safety.rs  fuzz_dnn_blob.rs  fuzz_encode.rs  fuzz_encode_mode_transitions.rs  fuzz_encode_multiframe.rs  fuzz_encode_multiframe_stereo.rs  fuzz_encode_safety.rs  fuzz_multistream.rs  fuzz_packet_parse.rs  fuzz_repacketizer.rs  fuzz_repacketizer_seq.rs  fuzz_roundtrip.rs  fuzz_roundtrip_safety.rs  oracle.rs
tests/fuzz/known_failures/encode-float-lowdelay-8k-divergence/: README.md
tests/fuzz/known_failures/mode-transitions-stereo-hybrid-state-divergence/: crash-c8a2098632adba9802b1abc855b559fb4f011825
tests/fuzz/known_failures/multiframe-cbr-cross-frame-divergence/: README.md
tests/fuzz/known_failures/multiframe-vbr-fec-dtx-divergence/: README.md  crash-55d77303fe6edf000bcc3c3ad99a94d586023e08  crash-654607c9e9877057a733e156a8624db30b5eb10f  crash-c279a21ee7b7502d61ad07bf14bb7f4fc27362a2  crash-ef75a896587741f47d752d44b9b5518acd51128e
tests/fuzz/known_failures/multistream-decode-family-asymmetry/: README.md
tests/fuzz/known_failures/multistream-decode-recovery-divergence/: README.md
tests/fuzz/known_failures/multistream-decode-subpacket-oob/: README.md  crash-120c4ac376c584ec209a36c009af24253482e810  crash-ef01c3ea0d00b3b010fe61dac66b514e4256f18d  crash-f23bd5f24ad728d0f3835d054ee2b9199808d2e9  crash-streamD-smoke
tests/fuzz/known_failures/multistream-encode-bytes-divergence/: README.md
tests/fuzz/known_failures/multistream-family255-error-asymmetry/: README.md
tests/fuzz/known_failures/nan-encode-float/: README.md  crash-54acd282f7bd446d92811b719f183d6eea294f84
tests/fuzz/known_failures/roundtrip-float-12k-cx7-vbr-divergence/: README.md
tests/fuzz/tests/: ctl_sequence_parity.rs  frame_duration_tests.rs  multistream_decode_asymmetries.rs  oracle_tests.rs
(+554 files in other folders)
