[workspace]
resolver = "3"
members = ["ropus", "harness", "capi", "ropus-cli", "ropus-fb2k", "tests/conformance"]
exclude = ["tests/fuzz", "reference"]

[profile.dev]
overflow-checks = false
panic = "unwind"

[profile.test]
panic = "unwind"

[profile.release]
# ThinLTO beats FatLTO by ~6-8pp on encode across the board, and PGO is
# a wash-to-negative on top. See wrk_journals/2026.04.19 - JRN - lto-pgo-bakeoff.md
# and the README "Performance" section for the measurement.
lto = "thin"
codegen-units = 1
panic = "unwind"
