[package]
name = "full-test"
version = "0.1.0"
edition = "2024"
publish = false
description = "Local validation runner for the ropus workspace. Phase 1 scaffold."
license = "BSD-3-Clause"
authors = ["0x4D44 <martingdavidson@gmail.com>"]

[[bin]]
name = "full-test"
path = "src/main.rs"

[dependencies]
# Versions pinned to what the workspace already resolves in Cargo.lock so
# nothing shifts in the lockfile when this crate is added.
colored = "2.2"
regex = "1.12"
serde_json = "1.0"
