[package]
name = "full-test"
version = "0.4.4"
edition = "2024"
publish = false
description = "Local validation runner for the ropus workspace."
license = "BSD-3-Clause"
authors = ["0x4D44 <martingdavidson@gmail.com>"]

[[bin]]
name = "full-test"
path = "src/main.rs"

[dependencies]
# Versions pinned to what the workspace already resolves in Cargo.lock so
# nothing shifts in the lockfile when this crate is added.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
colored = "2.2"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"
