[package]
name = "ropus-harness"
version = "0.0.2"
edition = "2024"
license = "BSD-3-Clause"
publish = false

[dependencies]
# `trace-silk-encode` enables the Phase B encode-side trace tuples used
# by the `fuzz_repro_diff` Cluster A diagnostic. Off-by-default in
# ropus; the harness opts in unconditionally because the trace push
# is cheap (one Mutex-guarded Vec push) and uniformly available means
# the diagnostic never has to maintain a feature-toggle build matrix.
ropus = { path = "../ropus", features = ["trace-silk-encode"] }
ogg = "0.9"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3.27"

[[bin]]
name = "ropus-compare"
path = "src/main.rs"

[[bin]]
name = "replay_fuzz_decode"
path = "src/bin/replay_fuzz_decode.rs"

[[bin]]
name = "diff_fuzz_decode"
path = "src/bin/diff_fuzz_decode.rs"

[[bin]]
name = "ropus-interframe"
path = "src/bin/interframe.rs"

[[bin]]
name = "repro-fuzz-roundtrip"
path = "src/bin/repro_fuzz_roundtrip.rs"

[[bin]]
name = "trace_silk_wb"
path = "src/bin/trace_silk_wb.rs"

[[bin]]
name = "projection_roundtrip"
path = "src/bin/projection_roundtrip.rs"

[[bin]]
name = "corpus_diff"
path = "src/bin/corpus_diff.rs"

[[bin]]
name = "ctrl_decode_fixed"
path = "src/bin/ctrl_decode_fixed.rs"
