[package]
name = "ropus-tools-core"
version = "0.1.1"
edition = "2024"
authors = ["0x4D44 <martingdavidson@gmail.com>"]
description = "Shared library for the ropus command-line tools (encode/decode/info/play)"
license = "BSD-3-Clause"

[dependencies]
ropus = { path = "../ropus", version = "0.10" }
colored = "2.2"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "adpcm", "mp3", "flac", "ogg", "aac", "vorbis"] }    # WAV/MP3/FLAC/OGG/AAC input
rubato = "0.16"                                          # resample to 48 kHz
ogg = "0.9"                                              # Ogg container R/W
rodio = "0.20"                                           # playback (cpal under the hood)
anyhow = "1.0"                                           # error ergonomics for CLI callers
