[package]
name = "ropusenc"
version = "0.1.3"
edition = "2024"
authors = ["0x4D44 <martingdavidson@gmail.com>"]
description = "Encode any symphonia-supported input to Ogg Opus using the ropus codec"
license = "BSD-3-Clause"

[dependencies]
ropus-tools-core = { path = "../ropus-tools-core", version = "0.2" }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
chrono = "0.4"
