[package]
name = "ropusplay"
version = "0.1.0"
edition = "2024"
authors = ["0x4D44 <martingdavidson@gmail.com>"]
description = "Play an audio file via the default output device using the ropus codec"
license = "BSD-3-Clause"

[dependencies]
ropus-tools-core = { path = "../ropus-tools-core", version = "0.1" }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
chrono = "0.4"
