[package]
name = "mdopus-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mdopus = { path = "../.." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
doc = false

[[bin]]
name = "fuzz_encode"
path = "fuzz_targets/fuzz_encode.rs"
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_repacketizer"
path = "fuzz_targets/fuzz_repacketizer.rs"
doc = false

[[bin]]
name = "fuzz_packet_parse"
path = "fuzz_targets/fuzz_packet_parse.rs"
doc = false
